<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018. HuanLu Robotics. Todos los derechos reservados / All rigths reserved.
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_confirm_edit_incident"
        android:icon="@drawable/ic_menu_confirm"
        android:title="@string/confirm_finish_incident"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_item_delete_incident"
        android:icon="@drawable/ic_menu_delete"
        android:title="@string/delete_incident"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_item_duplicate_incident"
        android:icon="@drawable/ic_menu_duplicate"
        android:title="@string/duplicate_incident"
        app:showAsAction="never"/>
</menu>