<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018. HuanLu Robotics. Todos los derechos reservados / All rigths reserved.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp" >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="4dp" >
        <ImageView
            android:id="@+id/incident_photo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/incident_photo_description"
            android:scaleType="centerInside"
            android:background="@android:color/darker_gray"
            android:cropToPadding="true"/>
        <ImageButton
            android:id="@+id/incident_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_camera"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/incident_title_label"
            style="?android:listSeparatorTextViewStyle"/>
        <EditText
            android:id="@+id/incident_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:hint="@string/incident_title_hint"/>
    </LinearLayout>
</LinearLayout>