<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018. HuanLu Robotics. Todos los derechos reservados / All rigths reserved.
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:id="@+id/ll_empty_fragment_incident_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_vertical|center_horizontal">
        <ImageView
            android:id="@+id/empty_incident_list_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_empty_list" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_incident_list_message_textview"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/empty_incident_list_add_new_incident_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/empty_incident_list_add_new_incident_button_message" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_retry_fragment_incident_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical|center_horizontal">
        <ImageView
            android:id="@+id/retry_incident_list_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_retry_list" />
        <TextView
            android:id="@+id/retry_incident_list_message_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry_incident_list_message_textview"
            android:layout_gravity="center" />
        <Button
            android:id="@+id/retry_incident_list_add_new_incident_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/retry_incident_list_button_message" />
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress_bar_fragment_incident_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <android.support.v7.widget.RecyclerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/incident_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</RelativeLayout>
